--- a/PlanetCamera.CSharp.csproj
+++ b/PlanetCamera.CSharp.csproj
@@ -69,6 +69,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\bear\Move.cs" />
+    <Compile Include="Assets\scripts\Domino.cs" />
+    <Compile Include="Assets\scripts\DominoSpwan.cs" />
     <Compile Include="Assets\scripts\FlowCamera.cs" />
     <Compile Include="Assets\scripts\FlowPoint.cs" />
     <Compile Include="Assets\scripts\MirrorCamera.cs" />
