--- a/PlanetCamera.CSharp.csproj
+++ b/PlanetCamera.CSharp.csproj
@@ -73,10 +73,10 @@
     <Compile Include="Assets\scripts\Domino.cs" />
     <Compile Include="Assets\scripts\DominoSpwan.cs" />
     <Compile Include="Assets\scripts\FlowCamera.cs" />
-    <Compile Include="Assets\scripts\FollowPoint.cs" />
     <Compile Include="Assets\scripts\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\PlayerController.cs" />
     <Compile Include="Assets\scripts\PlayerControllerSimple.cs" />
+    <Compile Include="Assets\scripts\SpringArm.cs" />
     <Compile Include="Assets\scripts\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\TestRotationEularAngle.cs" />
   </ItemGroup>
