--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -138,9 +138,11 @@
     <Compile Include="Assets\scripts\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\PlayerControllerSimple.cs" />
+    <Compile Include="Assets\scripts\Shared\DS.cs" />
     <Compile Include="Assets\scripts\SpringArm.cs" />
     <Compile Include="Assets\scripts\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\TestRotationEularAngle.cs" />
+    <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
