--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -127,22 +127,25 @@
     <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
     <Compile Include="Assets\bear\Move.cs" />
-    <Compile Include="Assets\scripts\AndroidInput.cs" />
-    <Compile Include="Assets\scripts\CameraPivot.cs" />
-    <Compile Include="Assets\scripts\Domino.cs" />
-    <Compile Include="Assets\scripts\DominoSpwan.cs" />
-    <Compile Include="Assets\scripts\FlowCamera.cs" />
-    <Compile Include="Assets\scripts\FollowerController.cs" />
-    <Compile Include="Assets\scripts\MirrorCamera.cs" />
-    <Compile Include="Assets\scripts\PCInput.cs" />
-    <Compile Include="Assets\scripts\PlanetMovable.cs" />
-    <Compile Include="Assets\scripts\PlanetPlayerController.cs" />
-    <Compile Include="Assets\scripts\PlayerControllerSimple.cs" />
+    <Compile Include="Assets\scripts\Actor\Domino.cs" />
+    <Compile Include="Assets\scripts\Actor\DominoSpwan.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\MeshGravityGenerator.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\PlaneGravityGenerator.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
+    <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
+    <Compile Include="Assets\scripts\Input\PCInput.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
-    <Compile Include="Assets\scripts\SpringArm.cs" />
-    <Compile Include="Assets\scripts\TestRotationAxis.cs" />
-    <Compile Include="Assets\scripts\TestRotationEularAngle.cs" />
+    <Compile Include="Assets\scripts\Test\FlowCamera.cs" />
+    <Compile Include="Assets\scripts\Test\FollowerController.cs" />
+    <Compile Include="Assets\scripts\Test\PlayerControllerSimple.cs" />
+    <Compile Include="Assets\scripts\Test\SpringArm.cs" />
+    <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
+    <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
+    <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
+    <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
+    <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
+    <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
