--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -136,13 +136,15 @@
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
     <Compile Include="Assets\scripts\Test\FlowCamera.cs" />
-    <Compile Include="Assets\scripts\Test\FollowerController.cs" />
     <Compile Include="Assets\scripts\Test\PlayerControllerSimple.cs" />
     <Compile Include="Assets\scripts\Test\SpringArm.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
+    <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
+    <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
+    <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
