--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
+    <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
   </ItemGroup>
