--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -146,6 +146,10 @@
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
+    <Compile Include="Assets\scripts\Tool\DoWorldScale.cs" />
+    <Compile Include="Assets\scripts\Tool\EndlessCorridorHolder.cs" />
+    <Compile Include="Assets\scripts\Tool\EndlessCorridorManager.cs" />
+    <Compile Include="Assets\scripts\Tool\EndlessCorridorTriggerBox.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
