--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
+    <Compile Include="Assets\scripts\Tool\Scalable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
