--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Assets\scripts\Test\SpringArm.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
+    <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
