為水加上反射材質
使用SurfaceOutputStandard就可以設定Metallic
加上unity的SSRR後，就有反射的效果了(雖然效果不太好，但水晃動起來就看不太出來了)

--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -129,6 +129,8 @@
     <Compile Include="Assets\PostProcessing\Runtime\Utils\MaterialFactory.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
+    <Compile Include="Assets\Water\AnimateEmissive.cs" />
+    <Compile Include="Assets\Water\AnimateWave.cs" />
     <Compile Include="Assets\Water\WaterRange.cs" />
     <Compile Include="Assets\bear\Move.cs" />
     <Compile Include="Assets\scripts\Actor\Domino.cs" />
