加上水下物件的clip
Clipping of underwater objects on reflection image
(Code是從Unity 內建的water4貼過來的；oblique projection matrix的數學我還是不懂)

http://khayyam.kaplinski.com/2011/09/reflective-water-with-glsl-part-i.html

--- a/PlanetCamera.Editor.csproj
+++ b/PlanetCamera.Editor.csproj
@@ -213,6 +213,7 @@
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAddSoft.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
     <None Include="Assets\Water\fetchWaveData.shader" />
+    <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
     <None Include="Assets\materials\mirror.shader" />
   </ItemGroup>
