add PeekTangent Scene
Unity use cross(v.Normal,v.tangent)*v.tanget.w
to find biNormal

I guess v.tanget.w=-1 in general situation
and v.tangetw=1 in mirror situation

then I try some test

--- a/PlanetCamera.Editor.csproj
+++ b/PlanetCamera.Editor.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Compile Include="Assets\Editor\CreateGravitySensorEditor.cs" />
     <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
+    <Compile Include="Assets\Editor\PeekGeoEditor.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Attributes\PostProcessingModelEditorAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Models\AmbientOcclusionModelEditor.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Models\AntialiasingModelEditor.cs" />
@@ -212,6 +213,7 @@
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAdd.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAddSoft.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
+    <None Include="Assets\Water\Test\NewSurfaceShader.shader" />
     <None Include="Assets\Water\fetchWaveData.shader" />
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
