--- a/PlanetCamera.Plugins.csproj
+++ b/PlanetCamera.Plugins.csproj
@@ -172,6 +172,7 @@
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAdd.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAddSoft.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
+    <None Include="Assets\Water\Test\NewSurfaceShader.shader" />
     <None Include="Assets\Water\fetchWaveData.shader" />
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
