--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\Tool\Scalable.cs" />
+    <Compile Include="Assets\test\PeekGeo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
@@ -210,6 +211,7 @@
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAdd.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAddSoft.shader" />
     <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
+    <None Include="Assets\Water\Test\NewSurfaceShader.shader" />
     <None Include="Assets\Water\fetchWaveData.shader" />
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
