--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -160,6 +160,8 @@
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
+    <Compile Include="Assets\scripts\Tool\PlayerJumpForceMonitor.cs" />
+    <Compile Include="Assets\scripts\Tool\PlayerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\Scalable.cs" />
     <Compile Include="Assets\test\NormalMapAxis.cs" />
     <Compile Include="Assets\test\PeekGeo.cs" />
