--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
+    <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
     <Compile Include="Assets\scripts\Tool\EndlessCorridorHolder.cs" />
     <Compile Include="Assets\scripts\Tool\EndlessCorridorManager.cs" />
     <Compile Include="Assets\scripts\Tool\EndlessCorridorTriggerBox.cs" />
