--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -151,6 +151,8 @@
     <Compile Include="Assets\scripts\Test\SpringArm.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
+    <Compile Include="Assets\scripts\Tool\AddForceAlongWall.cs" />
+    <Compile Include="Assets\scripts\Tool\AddUpForceWhenCollision.cs" />
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
