--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -148,9 +148,7 @@
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
-    <Compile Include="Assets\scripts\Test\FlowCamera.cs" />
-    <Compile Include="Assets\scripts\Test\PlayerControllerSimple.cs" />
-    <Compile Include="Assets\scripts\Test\SpringArm.cs" />
+    <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
     <Compile Include="Assets\scripts\Tool\AddForceAlongWall.cs" />
