--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\CreateLinedUp.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\FourtyFiveDegree.cs" />
+    <Compile Include="Assets\scripts\Factoryplugin\SetMirrorCamera.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\MeshGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlaneGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
