--- a/PlanetCamera.Editor.csproj
+++ b/PlanetCamera.Editor.csproj
@@ -127,6 +127,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Editor\AlignPlanetCenterEditor.cs" />
     <Compile Include="Assets\Editor\CreateGravitySensorEditor.cs" />
     <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
     <Compile Include="Assets\Editor\PeekGeoEditor.cs" />
