--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
     <Compile Include="Assets\scripts\Tool\AddForceAlongWall.cs" />
     <Compile Include="Assets\scripts\Tool\AddUpForceWhenCollision.cs" />
+    <Compile Include="Assets\scripts\Tool\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
@@ -163,9 +164,11 @@
     <Compile Include="Assets\scripts\Tool\EndlessCorridorTriggerBox.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
+    <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
+    <Compile Include="Assets\scripts\Tool\NormalSlope.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\Tool\PlayerJumpForceMonitor.cs" />
