--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -168,12 +168,12 @@
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
-    <Compile Include="Assets\scripts\Tool\NormalSlope.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\Tool\PlayerJumpForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\PlayerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\Scalable.cs" />
+    <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
     <Compile Include="Assets\test\NormalMapAxis.cs" />
     <Compile Include="Assets\test\PeekGeo.cs" />
     <Compile Include="Assets\test\RotateByAxis.cs" />
