--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -151,7 +151,7 @@
     <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
-    <Compile Include="Assets\scripts\Tool\AddForceAlongWall.cs" />
+    <Compile Include="Assets\scripts\Tool\AddForceAlongWallOnAir.cs" />
     <Compile Include="Assets\scripts\Tool\AddUpForceWhenCollision.cs" />
     <Compile Include="Assets\scripts\Tool\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
