--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Assets\scripts\Actor\Domino.cs" />
     <Compile Include="Assets\scripts\Actor\DominoSpwan.cs" />
     <Compile Include="Assets\scripts\AnimationState\OnAirState.cs" />
+    <Compile Include="Assets\scripts\AnimationState\QBox\QBoxDoScale.cs" />
+    <Compile Include="Assets\scripts\AnimationState\QBox\QBoxFinal.cs" />
+    <Compile Include="Assets\scripts\AnimationState\QBox\QBoxReady.cs" />
     <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddPlanet.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
@@ -146,6 +149,8 @@
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
+    <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
+    <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
     <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
@@ -165,7 +170,6 @@
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
-    <Compile Include="Assets\scripts\Tool\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
