--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -138,6 +138,9 @@
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxDoScale.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxFinal.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxReady.cs" />
+    <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorHolder.cs" />
+    <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorManager.cs" />
+    <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
     <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddPlanet.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
@@ -163,9 +166,6 @@
     <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
     <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
-    <Compile Include="Assets\scripts\Tool\EndlessCorridorHolder.cs" />
-    <Compile Include="Assets\scripts\Tool\EndlessCorridorManager.cs" />
-    <Compile Include="Assets\scripts\Tool\EndlessCorridorTriggerBox.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
