--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
+    <Compile Include="Assets\scripts\Tool\MeasuringJumpHeight.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
