--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -150,6 +150,9 @@
     <Compile Include="Assets\scripts\GravityGenerator\MeshGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlaneGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
+    <Compile Include="Assets\scripts\help\AlignPlanetCenter.cs" />
+    <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
+    <Compile Include="Assets\scripts\help\PeekDefaultPhysicsMaterail.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
     <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
@@ -158,8 +161,6 @@
     <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
-    <Compile Include="Assets\scripts\Tool\AddUpForceWhenCollision.cs" />
-    <Compile Include="Assets\scripts\Tool\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
     <Compile Include="Assets\scripts\Tool\AvoidStickTool.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
@@ -169,7 +170,6 @@
     <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
     <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
-    <Compile Include="Assets\scripts\Tool\MeasuringJumpHeight.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
