--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Assets\scripts\help\PeekDefaultPhysicsMaterail.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
+    <Compile Include="Assets\scripts\Machine\IceSkatingToggle.cs" />
     <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
