整理程式碼
(1)分類一下script
(2)新增PlayerMoveForceRepository用來切換不同的PlayerMoveForce

(3)意外發現PlayerMoveForceMonitor normalLowGravity可以用來防止在斜坡交界處卡住(可以取代AvoidStickTool防斜坡卡住的功能)

--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -138,15 +138,20 @@
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxDoScale.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxFinal.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxReady.cs" />
+    <Compile Include="Assets\scripts\Controller\FollowerController.cs" />
+    <Compile Include="Assets\scripts\Controller\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorHolder.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorManager.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
+    <Compile Include="Assets\scripts\EndlessCorridor\Scalable.cs" />
     <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddPlanet.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\CreateLinedUp.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\FourtyFiveDegree.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\SetMirrorCamera.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\CreateGravitySensor.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\GravityDirectionMonitor.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\MeshGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlaneGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
@@ -155,9 +160,13 @@
     <Compile Include="Assets\scripts\help\PeekDefaultPhysicsMaterail.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
-    <Compile Include="Assets\scripts\Machine\GroundToggle.cs" />
+    <Compile Include="Assets\scripts\Machine\GroundTypeSetter.cs" />
     <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
+    <Compile Include="Assets\scripts\MoveForceMonitor\ConstMoveForceMonitor.cs" />
+    <Compile Include="Assets\scripts\MoveForceMonitor\FollowerMoveForceMonitor.cs" />
+    <Compile Include="Assets\scripts\MoveForceMonitor\PlayerMoveForceMonitor.cs" />
+    <Compile Include="Assets\scripts\MoveForceMonitor\PlayerMoveForceRepository.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
     <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
@@ -165,19 +174,10 @@
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
     <Compile Include="Assets\scripts\Tool\AvoidStickTool.cs" />
     <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
-    <Compile Include="Assets\scripts\Tool\ConstMoveForceMonitor.cs" />
-    <Compile Include="Assets\scripts\Tool\CreateGravitySensor.cs" />
     <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
-    <Compile Include="Assets\scripts\Tool\FollowerController.cs" />
-    <Compile Include="Assets\scripts\Tool\FollowerMoveForceMonitor.cs" />
-    <Compile Include="Assets\scripts\Tool\GravityDirectionMonitor.cs" />
     <Compile Include="Assets\scripts\Tool\MirrorCamera.cs" />
     <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
-    <Compile Include="Assets\scripts\Tool\PlanetPlayerController.cs" />
-    <Compile Include="Assets\scripts\Tool\PlayerJumpForceMonitor.cs" />
-    <Compile Include="Assets\scripts\Tool\PlayerMoveForceMonitor.cs" />
-    <Compile Include="Assets\scripts\Tool\Scalable.cs" />
     <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
     <Compile Include="Assets\test\NormalMapAxis.cs" />
