--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -167,6 +167,8 @@
     <Compile Include="Assets\scripts\MoveForceMonitor\CharacterMoveForceRepository.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
     <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
+    <Compile Include="Assets\scripts\Test\TestOnCollisionEnterPrintCollision.cs" />
+    <Compile Include="Assets\scripts\Test\TestOnCollisionEnterPrintSelf.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
     <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
