--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -134,6 +134,11 @@
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
     <Compile Include="Assets\scripts\Actor\Domino.cs" />
     <Compile Include="Assets\scripts\Actor\DominoSpwan.cs" />
+    <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineBack2Original.cs" />
+    <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineInitWait.cs" />
+    <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineMove2Target.cs" />
+    <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineWaitAtOriginal.cs" />
+    <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineWaitAtTarget.cs" />
     <Compile Include="Assets\scripts\AnimationState\OnAirState.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxDoScale.cs" />
     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxFinal.cs" />
