--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -165,7 +165,9 @@
     <Compile Include="Assets\scripts\help\PeekDefaultPhysicsMaterail.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
+    <Compile Include="Assets\scripts\Machine\DisalbeAirCableMotor.cs" />
     <Compile Include="Assets\scripts\Machine\DoRotation.cs" />
+    <Compile Include="Assets\scripts\Machine\EnableAirCableCarMotor.cs" />
     <Compile Include="Assets\scripts\Machine\GroundTypeSetter.cs" />
     <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
     <Compile Include="Assets\scripts\Machine\PosFollow.cs" />
