--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -162,9 +162,9 @@
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
     <Compile Include="Assets\scripts\help\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
-    <Compile Include="Assets\scripts\help\PeekDefaultPhysicsMaterail.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
+    <Compile Include="Assets\scripts\Machine\DestoryGameObject.cs" />
     <Compile Include="Assets\scripts\Machine\DisalbeAirCableMotor.cs" />
     <Compile Include="Assets\scripts\Machine\DoRotation.cs" />
     <Compile Include="Assets\scripts\Machine\EnableAirCableCarMotor.cs" />
