--- a/PlanetCamera.Editor.csproj
+++ b/PlanetCamera.Editor.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Assets\Editor\CreateGravitySensorEditor.cs" />
     <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
     <Compile Include="Assets\Editor\PeekGeoEditor.cs" />
+    <Compile Include="Assets\Editor\PlanetMovableInspector.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Attributes\PostProcessingModelEditorAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Models\AmbientOcclusionModelEditor.cs" />
     <Compile Include="Assets\PostProcessing\Editor\Models\AntialiasingModelEditor.cs" />
