--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
     <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
     <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
+    <Compile Include="Assets\scripts\Tool\TheTopOne.cs" />
     <Compile Include="Assets\scripts\Tool\UsingAnimator.cs" />
     <Compile Include="Assets\test\NormalMapAxis.cs" />
     <Compile Include="Assets\test\PeekGeo.cs" />
