覺的implosion的移動操作蠻人性化的，就來實作看看

--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Assets\scripts\help\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
+    <Compile Include="Assets\scripts\Input\JoyStickControlPanel.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
     <Compile Include="Assets\scripts\Machine\DestoryGameObject.cs" />
     <Compile Include="Assets\scripts\Machine\DisalbeAirCableMotor.cs" />
