--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Assets\scripts\Controller\FollowerController.cs" />
     <Compile Include="Assets\scripts\Controller\PlanetPlayerController.cs" />
     <Compile Include="Assets\scripts\Controller\StandingController.cs" />
+    <Compile Include="Assets\scripts\Controller\SurfaceFollowHelper.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorHolder.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorManager.cs" />
     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
