--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Assets\scripts\Machine\PosFollow.cs" />
     <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
     <Compile Include="Assets\scripts\Machine\SetParent.cs" />
+    <Compile Include="Assets\scripts\Machine\SinMove.cs" />
     <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceParameterRepository.cs" />
     <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceSetting.cs" />
     <Compile Include="Assets\scripts\Shared\DS.cs" />
