--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
     <Compile Include="Assets\scripts\Input\JoyStickControlPanel.cs" />
     <Compile Include="Assets\scripts\Input\PCInput.cs" />
+    <Compile Include="Assets\scripts\Machine\CoroutineMove.cs" />
     <Compile Include="Assets\scripts\Machine\DestoryGameObject.cs" />
     <Compile Include="Assets\scripts\Machine\DisalbeAirCableMotor.cs" />
     <Compile Include="Assets\scripts\Machine\Door.cs" />
