https://plus.google.com/u/0/+XiangweiChiou/posts/6JWzEoam2q9 測試方法一：目前發現在Deffered Shading 無法正常設定stencil；所以只有Forward Rendering可以正常運作

--- a/PlanetCamera.Editor.csproj
+++ b/PlanetCamera.Editor.csproj
@@ -401,6 +401,7 @@
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
     <None Include="Assets\materials\BehindTheWall.shader" />
+    <None Include="Assets\materials\BehindTheWallMask.shader" />
     <None Include="Assets\materials\mirror.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
