(1)修正上個版本的一些小問題 (2)加上Factory BigPlayer讓阿寶變大

--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -369,6 +369,7 @@
     <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddPlanet.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
+    <Compile Include="Assets\scripts\Factoryplugin\BigPlayer.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\CreateLinedUp.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\FourtyFiveDegree.cs" />
     <Compile Include="Assets\scripts\Factoryplugin\SetMirrorCamera.cs" />
