clipmap好煩麻，還是用regular grid吧

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -168,12 +168,12 @@
      <Compile Include="Assets\scripts\Tool\BehindTheWall\RenderBehindTheWallCommandBuffer.cs" />
      <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
-     <Compile Include="Assets\scripts\Tool\ModifyClipmapMeshBound.cs" />
      <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
      <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
      <Compile Include="Assets\scripts\Tool\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
+     <Compile Include="Assets\scripts\Tool\SphereTerrainPiece.cs" />
      <Compile Include="Assets\scripts\Tool\TheTopOne.cs" />
      <Compile Include="Assets\scripts\Tool\UsingAnimator.cs" />
      <Compile Include="Assets\test\NormalMapAxis.cs" />
