測式同時畫多個平面
目前這種作法，brush在交界處會有問題
還是必須攤平6個矩形，才能得到正確的結果

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\DiyTerrain\DrawMeshAABB.cs" />
      <Compile Include="Assets\DiyTerrain\ShowMeshBound.cs" />
      <Compile Include="Assets\DiyTerrain\SphereTerrain.cs" />
+     <Compile Include="Assets\DiyTerrain\SphereTerrainBrushController.cs" />
      <Compile Include="Assets\DiyTerrain\SphereTerrainPiece.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
