新增1個有光照效果的toSphere

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -236,6 +236,7 @@
      <None Include="Assets\PostProcessing\Resources\Shaders\DepthOfField.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\ScreenSpaceRaytrace.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\Bloom.shader" />
+     <None Include="Assets\DiyTerrain\shaders\ToSpherePBR.shader" />
      <None Include="Assets\materials\BehindTheWall\BehindTheWallUseMaskAndDepthTexture.shader" />
      <None Include="Assets\PostProcessing\Editor Resources\Monitors\VectorscopeRender.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\EyeAdaptation.shader" />
