整理測試用的場景資料夾，集中到Test

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,29 +63,29 @@
      <Compile Include="Assets\DiyTerrain\SphereTerrainBrushController.cs" />
      <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorManager.cs" />
      <Compile Include="Assets\scripts\Machine\WaterParkManager.cs" />
-     <Compile Include="Assets\PeekTanget\RotateByAxis2.cs" />
+     <Compile Include="Assets\Test\PeekTanget\scripts\RotateByAxis2.cs" />
      <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
      <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
      <Compile Include="Assets\scripts\Tool\BehindTheWall\RenderBehindTheWallCommandBuffer.cs" />
      <Compile Include="Assets\DiyTerrain\Stitching.cs" />
      <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceParameterRepository.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\DrawInstance.cs" />
+     <Compile Include="Assets\scripts\DrawInstance.cs" />
      <Compile Include="Assets\scripts\Machine\EnableAirCableCarMotor.cs" />
      <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
      <Compile Include="Assets\scripts\Controller\RigidbodyWrapper.cs" />
-     <Compile Include="Assets\PeekTanget\RotateByAxis.cs" />
+     <Compile Include="Assets\Test\PeekTanget\scripts\RotateByAxis.cs" />
      <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
      <Compile Include="Assets\scripts\Controller\SurfaceFollowHelper.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\TorusGravityGenerator.cs" />
-     <Compile Include="Assets\PeekTanget\NormalMapAxis.cs" />
+     <Compile Include="Assets\Test\PeekTanget\scripts\NormalMapAxis.cs" />
      <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
      <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineWaitAtTarget.cs" />
      <Compile Include="Assets\scripts\Controller\PlanetPlayerController.cs" />
      <Compile Include="Assets\scripts\Machine\PosFollow.cs" />
      <Compile Include="Assets\scripts\Machine\Door.cs" />
      <Compile Include="Assets\scripts\Shared\TagDefined.cs" />
-     <Compile Include="Assets\PeekTanget\PeekGeo.cs" />
-     <Compile Include="Assets\scripts\Test\TestRotationEularAngle.cs" />
+     <Compile Include="Assets\Test\PeekTanget\scripts\PeekGeo.cs" />
+     <Compile Include="Assets\Test\Rotation\TestRotationEularAngle.cs" />
      <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
      <Compile Include="Assets\scripts\Controller\StandingController.cs" />
      <Compile Include="Assets\scripts\Tool\UsingAnimator.cs" />
@@ -115,16 +115,16 @@
      <Compile Include="Assets\scripts\Machine\SinMove.cs" />
      <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
      <Compile Include="Assets\scripts\Machine\SetParent.cs" />
-     <Compile Include="Assets\scripts\Test\TestOnCollisionEnterPrintSelf.cs" />
+     <Compile Include="Assets\Test\Collision\TestOnCollisionEnterPrintSelf.cs" />
      <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
      <Compile Include="Assets\scripts\Machine\Domino\Domino.cs" />
      <Compile Include="Assets\scripts\Input\JoyStickControlPanel.cs" />
      <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorHolder.cs" />
-     <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
+     <Compile Include="Assets\Test\Rotation\TestRotationAxis.cs" />
      <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineInitWait.cs" />
      <Compile Include="Assets\scripts\Shared\SharedTool.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
-     <Compile Include="Assets\scripts\Test\TestOnCollisionEnterPrintCollision.cs" />
+     <Compile Include="Assets\Test\Collision\TestOnCollisionEnterPrintCollision.cs" />
      <Compile Include="Assets\scripts\Machine\MirrorCamera.cs" />
      <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
      <Compile Include="Assets\scripts\Controller\FollowerController.cs" />
